--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: true
+      loadSidebar: true,
+      subMaxLevel: 2,
+      // alias: {
+      //   '/.*/_sidebar.md': '/_sidebar.md'
+      // }
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
