--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         clientSecret: '141a9fb714074158f52c315209bee2b0b9a76208',
         repo: 'uufe-flyelephant.github.io',
         owner: 'uufe-flyelephant',
-        admin: ['uufe-flyelephant'],
+        admin: ['uufe-flyelephant', 'xiachaoxulu', 'gaozhenze', 'AndyFong'],
         distractionFreeMode: false  // Facebook-like distraction free mode
     };
     window.$docsify = {
